@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2022, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,49 +23,30 @@
 
 /*
  * @test UnexpectedDeoptimizationTest
- * @key stress randomness
+ * @key stress
  * @summary stressing code cache by forcing unexpected deoptimizations
  * @library /test/lib /
  * @modules java.base/jdk.internal.misc
  *          java.management
  *
- * @build jdk.test.whitebox.WhiteBox compiler.codecache.stress.Helper compiler.codecache.stress.TestCaseImpl
- * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
+ * @build sun.hotspot.WhiteBox
+ * @run driver ClassFileInstaller sun.hotspot.WhiteBox
+ *                                sun.hotspot.WhiteBox$WhiteBoxPermission
  * @run main/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions
- *                   -XX:+WhiteBoxAPI
- *                   -XX:+IgnoreUnrecognizedVMOptions -XX:-DeoptimizeRandom
+ *                   -XX:+WhiteBoxAPI -XX:-DeoptimizeRandom
  *                   -XX:CompileCommand=dontinline,compiler.codecache.stress.Helper$TestCase::method
  *                   -XX:-SegmentedCodeCache
  *                   compiler.codecache.stress.UnexpectedDeoptimizationTest
  * @run main/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions
- *                   -XX:+WhiteBoxAPI
- *                   -XX:+IgnoreUnrecognizedVMOptions -XX:-DeoptimizeRandom
+ *                   -XX:+WhiteBoxAPI -XX:-DeoptimizeRandom
  *                   -XX:CompileCommand=dontinline,compiler.codecache.stress.Helper$TestCase::method
  *                   -XX:+SegmentedCodeCache
- *                   compiler.codecache.stress.UnexpectedDeoptimizationTest
- * @run main/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions
- *                   -XX:+WhiteBoxAPI
- *                   -XX:+IgnoreUnrecognizedVMOptions -XX:-DeoptimizeRandom
- *                   -XX:CompileCommand=dontinline,compiler.codecache.stress.Helper$TestCase::method
- *                   -XX:-SegmentedCodeCache
- *                   --enable-preview -DhelperVirtualThread=true
- *                   compiler.codecache.stress.UnexpectedDeoptimizationTest
- * @run main/othervm -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions
- *                   -XX:+WhiteBoxAPI
- *                   -XX:+IgnoreUnrecognizedVMOptions -XX:-DeoptimizeRandom
- *                   -XX:CompileCommand=dontinline,compiler.codecache.stress.Helper$TestCase::method
- *                   -XX:+SegmentedCodeCache
- *                   --enable-preview -DhelperVirtualThread=true
  *                   compiler.codecache.stress.UnexpectedDeoptimizationTest
  */
 
 package compiler.codecache.stress;
 
-import java.util.Random;
-import jdk.test.lib.Utils;
-
 public class UnexpectedDeoptimizationTest implements Runnable {
-    private final Random rng = Utils.getRandomInstance();
 
     public static void main(String[] args) {
         new CodeCacheStressRunner(new UnexpectedDeoptimizationTest()).runTest();
@@ -73,14 +54,7 @@ public class UnexpectedDeoptimizationTest implements Runnable {
 
     @Override
     public void run() {
-        Helper.WHITE_BOX.deoptimizeFrames(rng.nextBoolean());
-        // Sleep a short while to allow the stacks to grow - otherwise
-        //  we end up running almost all code in the interpreter
-        try {
-            Thread.sleep(10);
-        } catch (Exception e) {
-        }
-
+        Helper.WHITE_BOX.deoptimizeFrames(Helper.RNG.nextBoolean());
     }
 
 }
